--- a/docs/development/local-keep-network.adoc
+++ b/docs/development/local-keep-network.adoc
@@ -275,7 +275,7 @@ Running migration: 2_deploy_contracts.js
   KeepRandomBeaconServiceImplV1: 0x3179d9c794e597d6316736189bf040b74a2f1dd7
   Replacing KeepRandomBeaconService...
   ... 0x9facb5fe566862e67e50d6ad0fc622f717ee5cb795c7044ba9ad2ff32f9faa70
-  KeepRandomBeacon: 0x15045ff30d6327345cc052cc4b8c28dbe974a74b
+  KeepRandomBeaconService: 0x15045ff30d6327345cc052cc4b8c28dbe974a74b
   Replacing KeepRandomBeaconOperator...
   ... 0x9e49a94de6dfbc6496c89bb3edff8201ad407ba906893029185f72be2c4e9528
   KeepRandomBeaconOperator: 0x9da7876f5404dde662bf5cbc6ca1462e777571ff
