--- a/simulations/Mesa Simulations/Study_1.ipynb
+++ b/simulations/Mesa Simulations/Study_1.ipynb
@@ -132,13 +132,16 @@
     "dominator_distributions_2 = []\n",
     "total_dominator_percents_2 = []\n",
     "dominator_medians_2 = []\n",
+    "total_sig_failure_percents_2 = []\n",
     "for node_failure_percent in node_failure_percent_array:\n",
     "    dominator_distributions_1 = []\n",
     "    total_dominator_percents_1 = []\n",
     "    dominator_medians_1 = []\n",
+    "    total_sig_failure_percents_1 = []\n",
     "    for group_size in group_size_array:\n",
     "        dominator_distributions = []\n",
     "        total_dominator_percents = []\n",
+    "        total_sig_failure_percents = []\n",
     "        for run_number in range(runs):\n",
     "            # initialize the model\n",
     "            beacon_model = model.Beacon_Model(nodes, ticket_distribution, \n",
@@ -160,17 +163,22 @@
     "                # Calculate the dominator distribution and totals for each run\n",
     "                dominator_distr = np.zeros(nodes)\n",
     "                signature_count = 0\n",
+    "                failed_signatures =0\n",
     "                for signature in beacon_model.schedule.agents:\n",
     "                    if signature.type == \"signature\":\n",
+    "                        failed_signatures+=signature.signature_failure \n",
     "                        signature_count+=1\n",
     "                        if signature.dominator_id>=0:\n",
     "                            dominator_distr[signature.dominator_id] += 1 #count only if a dominator id has been set\n",
     "            dominator_distributions.append(dominator_distr)\n",
+    "            total_sig_failure_percents.append(round(failed_signatures/signature_count*100,1))\n",
     "            total_dominator_percents.append(round(sum(dominator_distr)/signature_count*100,1))\n",
     "        dominator_distributions_1.append(dominator_distributions)\n",
+    "        total_sig_failure_percents_1.append(total_sig_failure_percents)\n",
     "        total_dominator_percents_1.append(total_dominator_percents)\n",
     "        dominator_medians_1.append(np.median(total_dominator_percents))\n",
     "    dominator_distributions_2.append(dominator_distributions_1)\n",
+    "    total_sig_failure_percents_2.append(total_sig_failure_percents_1)\n",
     "    total_dominator_percents_2.append(total_dominator_percents_1)\n",
     "    dominator_medians_2.append(dominator_medians_1)\n"
    ]
@@ -215,79 +223,79 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>10</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>1.90</td>\n",
+       "      <td>4.70</td>\n",
+       "      <td>1.00</td>\n",
+       "      <td>1.05</td>\n",
        "      <td>0.00</td>\n",
        "      <td>0.00</td>\n",
        "      <td>2.10</td>\n",
        "      <td>0.00</td>\n",
-       "      <td>0.90</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>20</td>\n",
-       "      <td>15.20</td>\n",
-       "      <td>7.70</td>\n",
-       "      <td>5.15</td>\n",
-       "      <td>3.75</td>\n",
-       "      <td>2.15</td>\n",
-       "      <td>1.85</td>\n",
-       "      <td>2.80</td>\n",
+       "      <td>16.95</td>\n",
+       "      <td>5.85</td>\n",
+       "      <td>7.15</td>\n",
+       "      <td>3.90</td>\n",
+       "      <td>3.90</td>\n",
+       "      <td>5.80</td>\n",
+       "      <td>2.20</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>30</td>\n",
-       "      <td>39.85</td>\n",
-       "      <td>28.75</td>\n",
-       "      <td>20.20</td>\n",
-       "      <td>15.55</td>\n",
-       "      <td>16.50</td>\n",
-       "      <td>13.25</td>\n",
-       "      <td>11.40</td>\n",
+       "      <td>40.00</td>\n",
+       "      <td>25.70</td>\n",
+       "      <td>21.65</td>\n",
+       "      <td>17.00</td>\n",
+       "      <td>11.95</td>\n",
+       "      <td>12.50</td>\n",
+       "      <td>12.30</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>40</td>\n",
-       "      <td>63.70</td>\n",
-       "      <td>53.85</td>\n",
-       "      <td>47.95</td>\n",
-       "      <td>45.05</td>\n",
-       "      <td>46.35</td>\n",
-       "      <td>44.55</td>\n",
-       "      <td>40.75</td>\n",
+       "      <td>64.60</td>\n",
+       "      <td>53.35</td>\n",
+       "      <td>49.50</td>\n",
+       "      <td>48.75</td>\n",
+       "      <td>46.75</td>\n",
+       "      <td>45.65</td>\n",
+       "      <td>45.75</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>50</td>\n",
-       "      <td>79.80</td>\n",
-       "      <td>80.25</td>\n",
-       "      <td>80.20</td>\n",
-       "      <td>83.45</td>\n",
-       "      <td>76.40</td>\n",
-       "      <td>79.55</td>\n",
-       "      <td>79.40</td>\n",
+       "      <td>83.15</td>\n",
+       "      <td>79.45</td>\n",
+       "      <td>80.00</td>\n",
+       "      <td>80.00</td>\n",
+       "      <td>75.90</td>\n",
+       "      <td>77.90</td>\n",
+       "      <td>72.35</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
        "      <td>60</td>\n",
-       "      <td>92.70</td>\n",
-       "      <td>92.80</td>\n",
-       "      <td>94.75</td>\n",
+       "      <td>91.75</td>\n",
+       "      <td>93.10</td>\n",
+       "      <td>94.20</td>\n",
+       "      <td>93.15</td>\n",
+       "      <td>92.20</td>\n",
+       "      <td>94.40</td>\n",
        "      <td>93.85</td>\n",
-       "      <td>93.35</td>\n",
-       "      <td>94.70</td>\n",
-       "      <td>94.35</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
        "      <td>70</td>\n",
-       "      <td>97.55</td>\n",
-       "      <td>94.85</td>\n",
-       "      <td>96.95</td>\n",
-       "      <td>98.00</td>\n",
-       "      <td>97.75</td>\n",
-       "      <td>96.95</td>\n",
-       "      <td>96.15</td>\n",
+       "      <td>96.05</td>\n",
+       "      <td>96.45</td>\n",
+       "      <td>96.00</td>\n",
+       "      <td>96.40</td>\n",
+       "      <td>95.20</td>\n",
+       "      <td>96.25</td>\n",
+       "      <td>98.05</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -295,13 +303,13 @@
       ],
       "text/plain": [
        "   Failure %     10     20     30     40     50     60     70\n",
-       "0         10   0.00   1.90   0.00   0.00   2.10   0.00   0.90\n",
-       "1         20  15.20   7.70   5.15   3.75   2.15   1.85   2.80\n",
-       "2         30  39.85  28.75  20.20  15.55  16.50  13.25  11.40\n",
-       "3         40  63.70  53.85  47.95  45.05  46.35  44.55  40.75\n",
-       "4         50  79.80  80.25  80.20  83.45  76.40  79.55  79.40\n",
-       "5         60  92.70  92.80  94.75  93.85  93.35  94.70  94.35\n",
-       "6         70  97.55  94.85  96.95  98.00  97.75  96.95  96.15"
+       "0         10   4.70   1.00   1.05   0.00   0.00   2.10   0.00\n",
+       "1         20  16.95   5.85   7.15   3.90   3.90   5.80   2.20\n",
+       "2         30  40.00  25.70  21.65  17.00  11.95  12.50  12.30\n",
+       "3         40  64.60  53.35  49.50  48.75  46.75  45.65  45.75\n",
+       "4         50  83.15  79.45  80.00  80.00  75.90  77.90  72.35\n",
+       "5         60  91.75  93.10  94.20  93.15  92.20  94.40  93.85\n",
+       "6         70  96.05  96.45  96.00  96.40  95.20  96.25  98.05"
       ]
      },
      "execution_count": 4,
@@ -318,15 +326,71 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[[98.1, 95.7, 96.4, 95.3, 100.0, 98.0, 98.2, 95.7, 100.0, 94.6],\n",
+       "  [97.4, 93.6, 93.2, 93.9, 95.7, 94.6, 100.0, 96.6, 93.5, 95.7],\n",
+       "  [95.2, 100.0, 95.9, 97.9, 94.1, 97.9, 98.3, 97.7, 93.6, 95.5],\n",
+       "  [93.9, 96.6, 98.0, 98.0, 95.0, 95.6, 97.8, 95.7, 100.0, 91.5],\n",
+       "  [98.1, 97.9, 100.0, 97.6, 95.7, 94.6, 96.0, 96.0, 94.2, 98.0],\n",
+       "  [100.0, 98.1, 96.4, 93.2, 95.5, 98.0, 96.2, 100.0, 93.4, 98.1],\n",
+       "  [98.2, 96.2, 98.0, 98.1, 98.1, 95.8, 95.8, 97.7, 95.7, 97.6]],\n",
+       " [[95.0, 96.4, 98.2, 92.6, 94.9, 97.8, 97.5, 98.1, 96.2, 100.0],\n",
+       "  [96.2, 90.0, 95.7, 94.9, 98.1, 92.7, 97.5, 97.7, 96.0, 97.8],\n",
+       "  [94.6, 95.9, 90.5, 98.2, 93.2, 98.4, 93.8, 96.6, 94.3, 95.6],\n",
+       "  [97.7, 93.0, 95.7, 95.8, 96.2, 97.9, 97.7, 98.2, 100.0, 97.1],\n",
+       "  [98.0, 97.7, 95.1, 100.0, 94.5, 94.2, 96.0, 98.0, 97.9, 97.6],\n",
+       "  [94.4, 96.3, 96.2, 95.3, 98.1, 95.7, 100.0, 96.2, 96.3, 95.7],\n",
+       "  [96.1, 97.7, 96.3, 98.2, 98.1, 100.0, 97.7, 93.5, 95.3, 97.8]],\n",
+       " [[97.8, 100.0, 97.9, 98.0, 98.3, 97.9, 96.2, 96.4, 94.0, 98.2],\n",
+       "  [95.7, 95.7, 100.0, 96.6, 98.1, 96.4, 96.4, 98.3, 97.8, 91.1],\n",
+       "  [96.7, 95.7, 97.9, 94.9, 95.8, 95.9, 95.8, 95.5, 98.2, 100.0],\n",
+       "  [97.4, 97.5, 98.1, 96.3, 96.0, 95.3, 98.0, 92.0, 92.0, 96.5],\n",
+       "  [97.9, 97.9, 95.9, 96.1, 93.8, 93.3, 92.6, 97.9, 98.1, 97.7],\n",
+       "  [96.4, 98.0, 95.7, 98.2, 98.0, 98.1, 96.2, 96.4, 96.3, 98.2],\n",
+       "  [92.5, 96.4, 96.9, 94.3, 100.0, 98.1, 98.3, 98.1, 98.2, 100.0]],\n",
+       " [[96.6, 98.0, 92.9, 100.0, 95.7, 93.8, 95.9, 96.7, 92.2, 96.2],\n",
+       "  [100.0, 98.3, 98.1, 96.3, 97.4, 97.8, 93.8, 98.2, 97.8, 98.3],\n",
+       "  [98.2, 95.7, 96.5, 100.0, 98.2, 96.4, 93.9, 97.6, 97.3, 100.0],\n",
+       "  [96.6, 100.0, 93.5, 96.0, 98.0, 96.1, 98.3, 92.0, 96.2, 96.4],\n",
+       "  [100.0, 100.0, 96.6, 98.0, 93.8, 96.5, 98.1, 95.7, 95.9, 96.0],\n",
+       "  [100.0, 96.1, 93.0, 94.6, 98.1, 94.9, 98.1, 96.3, 95.9, 98.0],\n",
+       "  [95.7, 91.8, 96.2, 94.6, 97.6, 100.0, 97.9, 95.8, 97.8, 98.1]],\n",
+       " [[96.1, 97.6, 95.2, 95.9, 95.8, 98.1, 100.0, 95.7, 94.3, 94.6],\n",
+       "  [95.7, 96.2, 98.1, 95.6, 94.1, 98.0, 94.5, 97.9, 96.6, 97.2],\n",
+       "  [98.0, 96.1, 100.0, 93.0, 98.0, 97.7, 95.8, 96.4, 95.8, 100.0],\n",
+       "  [98.2, 97.9, 94.0, 95.7, 97.7, 94.3, 96.5, 96.2, 97.9, 100.0],\n",
+       "  [97.6, 98.2, 100.0, 97.8, 93.8, 97.9, 96.6, 98.2, 98.0, 97.8],\n",
+       "  [98.1, 98.1, 98.1, 98.3, 96.1, 98.0, 98.1, 97.6, 98.2, 94.3],\n",
+       "  [98.2, 98.0, 97.9, 97.2, 93.0, 96.3, 97.7, 97.8, 100.0, 100.0]],\n",
+       " [[97.9, 97.7, 100.0, 97.7, 95.3, 100.0, 93.6, 97.7, 96.0, 98.0],\n",
+       "  [96.2, 96.2, 95.7, 95.7, 97.6, 97.5, 97.6, 98.4, 95.6, 98.2],\n",
+       "  [95.9, 98.0, 100.0, 98.2, 98.1, 100.0, 95.7, 96.1, 98.0, 95.8],\n",
+       "  [98.1, 97.8, 100.0, 98.1, 98.0, 100.0, 96.0, 98.1, 96.4, 96.3],\n",
+       "  [100.0, 91.7, 93.8, 98.0, 98.2, 95.8, 94.8, 100.0, 95.5, 95.5],\n",
+       "  [94.9, 100.0, 95.9, 100.0, 100.0, 97.4, 97.7, 97.8, 96.3, 98.0],\n",
+       "  [100.0, 94.0, 97.7, 96.4, 98.0, 97.8, 97.7, 96.3, 97.9, 95.9]],\n",
+       " [[94.4, 96.0, 98.0, 92.2, 95.3, 96.3, 100.0, 96.6, 95.6, 98.0],\n",
+       "  [95.9, 95.9, 96.1, 98.0, 98.0, 98.0, 95.3, 98.2, 98.2, 98.2],\n",
+       "  [96.0, 98.4, 95.5, 98.2, 93.9, 100.0, 98.0, 95.9, 98.1, 97.9],\n",
+       "  [98.1, 97.9, 100.0, 94.5, 98.1, 98.3, 95.7, 98.0, 100.0, 96.2],\n",
+       "  [96.4, 100.0, 97.7, 98.1, 95.9, 96.2, 94.7, 100.0, 94.2, 97.4],\n",
+       "  [98.0, 98.1, 96.1, 94.1, 95.3, 95.7, 96.4, 100.0, 100.0, 98.0],\n",
+       "  [94.1, 100.0, 100.0, 97.9, 100.0, 100.0, 98.2, 100.0, 94.3, 100.0]]]"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "How many are unable to produce a signature?\n",
-    "cannot produce a signature if number of virtual stakers online is < min_honest threshold\n",
-    "dominator is when max owner + failed nodes  > max_malicious (need to change in current)\n",
-    "\n",
-    "move sim to new repo\n",
-    "check if colab can be run on separate infrastructure to google"
+    "total_sig_failure_percents_2"
    ]
   },
   {
